# java-play-framework-server/app/apimodels/GeneInfo.java
@@ -1,6 +1,7 @@
 package apimodels;
 
 import apimodels.Attribute;
+import apimodels.GeneInfoIdentifiers;
 import java.util.ArrayList;
 import java.util.List;
 import com.fasterxml.jackson.annotation.*;
@@ -11,12 +12,15 @@ import javax.validation.constraints.*;
 /**
  * GeneInfo
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-07-11T16:00:13.997Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2019-08-12T19:29:34.374Z")
 
 @SuppressWarnings({"UnusedReturnValue", "WeakerAccess"})
 public class GeneInfo   {
   @JsonProperty("gene_id")
   private String geneId = null;
+
+  @JsonProperty("identifiers")
+  private GeneInfoIdentifiers identifiers = null;
 
   @JsonProperty("attributes")
   private List<Attribute> attributes = null;
@@ -27,7 +31,7 @@ public class GeneInfo   {
   }
 
    /**
-   * Get geneId
+   * Id of the gene. Preferably HGNC id; can be Entrez or ENSEMBL id if HGNC id is not available.
    * @return geneId
   **/
   @NotNull
@@ -37,6 +41,24 @@ public class GeneInfo   {
 
   public void setGeneId(String geneId) {
     this.geneId = geneId;
+  }
+
+  public GeneInfo identifiers(GeneInfoIdentifiers identifiers) {
+    this.identifiers = identifiers;
+    return this;
+  }
+
+   /**
+   * Get identifiers
+   * @return identifiers
+  **/
+  @Valid
+  public GeneInfoIdentifiers getIdentifiers() {
+    return identifiers;
+  }
+
+  public void setIdentifiers(GeneInfoIdentifiers identifiers) {
+    this.identifiers = identifiers;
   }
 
   public GeneInfo attributes(List<Attribute> attributes) {
@@ -53,7 +75,7 @@ public class GeneInfo   {
   }
 
    /**
-   * Get attributes
+   * Additional information about the gene and provenance about gene-list menbership. Sharpener will use myGene.info to add the following attributes to every gene: 'gene_symbol',  'entrez_gene_id', 'HGNC', 'MIM', 'ensembl_gene_id', 'synonyms', 'gene_name',  and 'myGene.info id'. Multiple synonyms and ensembl_gene_id are separated by semicolons.
    * @return attributes
   **/
   @Valid
@@ -76,12 +98,13 @@ public class GeneInfo   {
     }
     GeneInfo geneInfo = (GeneInfo) o;
     return Objects.equals(geneId, geneInfo.geneId) &&
+        Objects.equals(identifiers, geneInfo.identifiers) &&
         Objects.equals(attributes, geneInfo.attributes);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(geneId, attributes);
+    return Objects.hash(geneId, identifiers, attributes);
   }
 
   @SuppressWarnings("StringBufferReplaceableByString")
@@ -91,6 +114,7 @@ public class GeneInfo   {
     sb.append("class GeneInfo {\n");
     
     sb.append("    geneId: ").append(toIndentedString(geneId)).append("\n");
+    sb.append("    identifiers: ").append(toIndentedString(identifiers)).append("\n");
     sb.append("    attributes: ").append(toIndentedString(attributes)).append("\n");
     sb.append("}");
     return sb.toString();
