# java-play-framework-server/public/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger" : "2.0",
   "info" : {
-    "version" : "1.0.0",
+    "version" : "1.1.0",
     "title" : "Sharpener API"
   },
   "host" : "indigo.ncats.io",
@@ -11,16 +11,19 @@
     "/create_gene_list" : {
       "post" : {
         "tags" : [ "sharpener" ],
+        "summary" : "Create a new gene list",
+        "description" : "Creates a new gene list from a collection of gene symbols.",
         "parameters" : [ {
           "in" : "body",
           "name" : "query",
-          "description" : "transformer query",
+          "description" : "a collection of gene symbols",
           "required" : true,
           "schema" : {
             "type" : "array",
             "items" : {
               "type" : "string"
-            }
+            },
+            "example" : [ "AURA", "TP53" ]
           }
         } ],
         "responses" : {
@@ -38,6 +41,8 @@
     "/transformers" : {
       "get" : {
         "tags" : [ "sharpener" ],
+        "summary" : "Retrieve a list of transformers",
+        "description" : "Provides a list of transformers and their descriptions.",
         "parameters" : [ ],
         "responses" : {
           "200" : {
@@ -56,6 +61,8 @@
     "/transform" : {
       "post" : {
         "tags" : [ "sharpener" ],
+        "summary" : "Transform a gene list",
+        "description" : "Depending on the function of a transformer, creates, expands, or filters a gene list.",
         "parameters" : [ {
           "in" : "body",
           "name" : "query",
@@ -80,10 +87,12 @@
     "/aggregate" : {
       "post" : {
         "tags" : [ "sharpener" ],
+        "summary" : "Aggregate multiple gene lists",
+        "description" : "Aggregates multiple gene lists into one gene list.",
         "parameters" : [ {
           "in" : "body",
           "name" : "query",
-          "description" : "transformer query",
+          "description" : "aggregation query",
           "required" : true,
           "schema" : {
             "$ref" : "#/definitions/aggregation_query"
@@ -100,34 +109,82 @@
         "x-contentType" : "application/json",
         "x-accepts" : "application/json"
       }
+    },
+    "/gene_list/{gene_list_id}" : {
+      "get" : {
+        "tags" : [ "sharpener" ],
+        "summary" : "Retrieve a gene list",
+        "description" : "Retrieves a gene list for a given gene-list id.",
+        "parameters" : [ {
+          "name" : "gene_list_id",
+          "in" : "path",
+          "description" : "gene-list id",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/gene_list"
+            }
+          }
+        },
+        "x-accepts" : "application/json"
+      }
     }
   },
   "definitions" : {
     "transformer_query" : {
       "type" : "object",
+      "required" : [ "controls", "name" ],
       "properties" : {
         "name" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Name of the transformer that will be executed."
         },
         "gene_list_id" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Id of the gene list that will be transformed. Required for expanders and filters;  should be ommited for producers."
         },
         "controls" : {
           "type" : "array",
+          "description" : "Values that control the behavior of the transformer. Names of the controls must match the names specified in the transformer's definition and values must match types (and possibly  allowed_values) specified in the transformer's definition.",
           "items" : {
             "$ref" : "#/definitions/property"
           }
         }
+      },
+      "example" : {
+        "name" : "MSigDB gene-set producer",
+        "controls" : [ {
+          "name" : "gene_set_name",
+          "value" : "REACTOME_GLUCOSE_TRANSPORT"
+        } ]
       }
     },
     "gene_list" : {
       "type" : "object",
+      "required" : [ "gene_list_id", "genes", "source" ],
       "properties" : {
         "gene_list_id" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Id of the gene list."
+        },
+        "source" : {
+          "type" : "string",
+          "description" : "Transformer that produced the gene list."
+        },
+        "attributes" : {
+          "type" : "array",
+          "description" : "Additional information and provenance about the gene list.",
+          "items" : {
+            "$ref" : "#/definitions/attribute"
+          }
         },
         "genes" : {
           "type" : "array",
+          "description" : "Members of the gene list.",
           "items" : {
             "$ref" : "#/definitions/gene_info"
           }
@@ -135,6 +192,12 @@
       },
       "example" : {
         "genes" : [ {
+          "identifiers" : {
+            "mim" : "MIM:608958",
+            "entrez" : "NCBIgene:100",
+            "ensembl" : [ "ENSEMBL:ENSG00000196839", "ENSEMBL:ENSG00000196839" ],
+            "hgnc" : "HGNC:186"
+          },
           "attributes" : [ {
             "name" : "name",
             "source" : "source",
@@ -146,6 +209,12 @@
           } ],
           "gene_id" : "gene_id"
         }, {
+          "identifiers" : {
+            "mim" : "MIM:608958",
+            "entrez" : "NCBIgene:100",
+            "ensembl" : [ "ENSEMBL:ENSG00000196839", "ENSEMBL:ENSG00000196839" ],
+            "hgnc" : "HGNC:186"
+          },
           "attributes" : [ {
             "name" : "name",
             "source" : "source",
@@ -157,7 +226,17 @@
           } ],
           "gene_id" : "gene_id"
         } ],
-        "gene_list_id" : "gene_list_id"
+        "gene_list_id" : "gene_list_id",
+        "attributes" : [ {
+          "name" : "name",
+          "source" : "source",
+          "value" : "value"
+        }, {
+          "name" : "name",
+          "source" : "source",
+          "value" : "value"
+        } ],
+        "source" : "source"
       }
     },
     "gene_info" : {
@@ -165,16 +244,27 @@
       "required" : [ "gene_id" ],
       "properties" : {
         "gene_id" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Id of the gene. Preferably HGNC id; can be Entrez or ENSEMBL id if HGNC id is not available."
+        },
+        "identifiers" : {
+          "$ref" : "#/definitions/gene_info_identifiers"
         },
         "attributes" : {
           "type" : "array",
+          "description" : "Additional information about the gene and provenance about gene-list menbership. Sharpener will use myGene.info to add the following attributes to every gene: 'gene_symbol',  'entrez_gene_id', 'HGNC', 'MIM', 'ensembl_gene_id', 'synonyms', 'gene_name',  and 'myGene.info id'. Multiple synonyms and ensembl_gene_id are separated by semicolons.",
           "items" : {
             "$ref" : "#/definitions/attribute"
           }
         }
       },
       "example" : {
+        "identifiers" : {
+          "mim" : "MIM:608958",
+          "entrez" : "NCBIgene:100",
+          "ensembl" : [ "ENSEMBL:ENSG00000196839", "ENSEMBL:ENSG00000196839" ],
+          "hgnc" : "HGNC:186"
+        },
         "attributes" : [ {
           "name" : "name",
           "source" : "source",
@@ -189,6 +279,7 @@
     },
     "attribute" : {
       "type" : "object",
+      "required" : [ "name", "value" ],
       "properties" : {
         "name" : {
           "type" : "string"
@@ -208,6 +299,7 @@
     },
     "property" : {
       "type" : "object",
+      "required" : [ "name", "value" ],
       "properties" : {
         "name" : {
           "type" : "string"
@@ -219,51 +311,81 @@
     },
     "transformer_info" : {
       "type" : "object",
+      "required" : [ "function", "name", "status" ],
       "properties" : {
         "name" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Name of the transformer."
+        },
+        "status" : {
+          "type" : "string",
+          "description" : "Status of the transformer, one of 'online', 'offline'.",
+          "enum" : [ "online", "offline" ]
         },
         "function" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Function of the transfomer, one of 'producer', 'expander', 'filter'.",
+          "enum" : [ "producer", "expander", "filter" ]
+        },
+        "description" : {
+          "type" : "string",
+          "description" : "Description of the transformer."
         },
         "parameters" : {
           "type" : "array",
+          "description" : "Parameters used to control the transformer.",
           "items" : {
             "$ref" : "#/definitions/parameter"
           }
+        },
+        "required_attributes" : {
+          "type" : "array",
+          "description" : "Gene attributes required by the transformer.",
+          "items" : {
+            "type" : "string"
+          }
         }
       },
+      "description" : "Definition of the transformer.",
       "example" : {
-        "function" : "function",
+        "required_attributes" : [ "required_attributes", "required_attributes" ],
+        "function" : "producer",
         "name" : "name",
+        "description" : "description",
         "parameters" : [ {
           "allowed_values" : [ "allowed_values", "allowed_values" ],
           "default" : "default",
           "name" : "name",
-          "type" : "type"
+          "type" : "Boolean"
         }, {
           "allowed_values" : [ "allowed_values", "allowed_values" ],
           "default" : "default",
           "name" : "name",
-          "type" : "type"
-        } ]
+          "type" : "Boolean"
+        } ],
+        "status" : "online"
       }
     },
     "parameter" : {
       "type" : "object",
+      "required" : [ "default", "name", "type" ],
       "properties" : {
         "name" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Name of the parameter."
         },
         "type" : {
           "type" : "string",
-          "description" : "type of a parameter, one of Boolean, int, double, string"
+          "description" : "Type of the parameter, one of 'Boolean', 'int', 'double', 'string'.",
+          "enum" : [ "Boolean", "int", "double", "string" ]
         },
         "default" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Default value of the parameter."
         },
         "allowed_values" : {
           "type" : "array",
+          "description" : "Allowed values for the parameter.",
           "items" : {
             "type" : "string"
           }
@@ -273,21 +395,58 @@
         "allowed_values" : [ "allowed_values", "allowed_values" ],
         "default" : "default",
         "name" : "name",
-        "type" : "type"
+        "type" : "Boolean"
       }
     },
     "aggregation_query" : {
       "type" : "object",
+      "required" : [ "gene_list_ids", "operation" ],
       "properties" : {
         "operation" : {
-          "type" : "string"
+          "type" : "string",
+          "description" : "Gene-list aggregation operation, one of 'union', 'intersection'."
         },
         "gene_list_ids" : {
           "type" : "array",
+          "example" : [ "gene_lis_id_1", "gene_list_id_2" ],
+          "description" : "Ids of the gene lists to be aggreagted.",
           "items" : {
             "type" : "string"
           }
         }
+      }
+    },
+    "gene_info_identifiers" : {
+      "properties" : {
+        "entrez" : {
+          "type" : "string",
+          "example" : "NCBIgene:100",
+          "description" : "Entrez gene id (CURIE)."
+        },
+        "hgnc" : {
+          "type" : "string",
+          "example" : "HGNC:186",
+          "description" : "HGNC gene id (CURIE)."
+        },
+        "mim" : {
+          "type" : "string",
+          "example" : "MIM:608958",
+          "description" : "OMIM gene id (CURIE)."
+        },
+        "ensembl" : {
+          "type" : "array",
+          "description" : "ENSEMBL gene id (CURIE).",
+          "items" : {
+            "type" : "string",
+            "example" : "ENSEMBL:ENSG00000196839"
+          }
+        }
+      },
+      "example" : {
+        "mim" : "MIM:608958",
+        "entrez" : "NCBIgene:100",
+        "ensembl" : [ "ENSEMBL:ENSG00000196839", "ENSEMBL:ENSG00000196839" ],
+        "hgnc" : "HGNC:186"
       }
     }
   }
